--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
      <script src="%PUBLIC_URL%/js/modernizr.js"></script>
     <script src="%PUBLIC_URL%/js/jquery-1.11.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-    <script type="text/javascript" src="%PUBLIC_URL%/js/bootstrap.bundle.min.js"></script>
+    <!-- <script type="text/javascript" src="%PUBLIC_URL%/js/bootstrap.bundle.min.js"></script> -->
     <script type="text/javascript" src="%PUBLIC_URL%/js/plugins.js"></script>
     <script type="text/javascript" src="%PUBLIC_URL%/js/script.js"></script>
   </head>
